--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           antialiased
           text-6xl
         ">
-      DekoHogar Diseño interior para ti
+      DekoHogar Diseño interior para ti carlos
     </h1>
 
     <h3 class="
