--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </div>
     </nav>
 
-    <img class="rounded-b-lg" src="/images/fondo1.jpg" alt="" />
+    <img class="rounded-b-lg" src="images/fondo1.jpg" alt="" />
   </header>
 
   <section class="container mx-auto px-4 m-4">
