--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
           <div>
             <p>
               <img class="h-80 p-2 rounded-xl" alt="Cambiar imagen" height="100"
-                onmouseout="this.src='/images/2marron.jpg';" onmouseover="this.src='/images/2marronclaro.jpg';"
-                src="/images/2marron.jpg" />
+                onmouseout="this.src='images/2marron.jpg';" onmouseover="this.src='images/2marronclaro.jpg';"
+                src="images/2marron.jpg" />
             </p>
           </div>
 
@@ -290,8 +290,8 @@
           <div>
             <p>
               <img class="h-80 p-2 rounded-xl" alt="Cambiar imagen" height="100"
-                onmouseout="this.src='/images/simpleoff.jpg';" onmouseover="this.src='/images/simpleon.jpg';"
-                src="/images/simpleoff.jpg" />
+                onmouseout="this.src='images/simpleoff.jpg';" onmouseover="this.src='images/simpleon.jpg';"
+                src="images/simpleoff.jpg" />
             </p>
           </div>
 
@@ -342,8 +342,8 @@
 
 
     <div>
-      <p><img class="h-auto p-1 rounded-xl shadow-sm" alt="Cambiar imagen" onmouseout="this.src='/images/italianoff.jpg';"
-          onmouseover="this.src='/images/italianon.jpg';" src="/images/italianoff.jpg" /></p>
+      <p><img class="h-auto p-1 rounded-xl shadow-sm" alt="Cambiar imagen" onmouseout="this.src='images/italianoff.jpg';"
+          onmouseover="this.src='images/italianon.jpg';" src="images/italianoff.jpg" /></p>
     </div>
     <div>
       <h3 class="tituloParrafo pt-16 text-teal-500 hover:text-teal-600 font-normal">
@@ -448,7 +448,7 @@
     <div class="wrapper  antialiased text-gray-900">
       <div>
           
-          <img src="/images/estanteon.jpg" alt=" random imgee" class="w-full object-cover object-center rounded-lg shadow-md">    
+          <img src="images/estanteon.jpg" alt=" random imgee" class="w-full object-cover object-center rounded-lg shadow-md">    
           
        <div class="relative px-4 -mt-16  ">
          <div class="bg-white p-6 rounded-lg shadow-lg">
