--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
           <div>
             <p>
               <img class="h-80 p-2 rounded-xl" alt="Cambiar imagen" height="100"
-                onmouseout="this.src='/images/1off.jpg';" onmouseover="this.src='/images/1on.jpg';"
-                src="/images/1off.jpg" />
+                onmouseout="this.src='images/1off.jpg';" onmouseover="this.src='images/1on.jpg';"
+                src="images/1off.jpg" />
             </p>
           </div>
 
