--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           antialiased
           text-6xl
         ">
-      DekoHogar Diseño interior para ti carlos hola
+      DekoHogar Diseño interior para ti 
     </h1>
 
     <h3 class="
@@ -402,7 +402,7 @@
 <h5 class="fParrafo p-2 text-justify">En DekoHogar están los muebles de diseño que querés. Años de trayectoria  avalan <br> la calidad de nuestros muebles a medida. ¡Consultá por entregas inmediatas!</h5>
 
 </div>
-<div><img class="pt-12 animate__animated animate__bounceInRight" src="/images/sofa.png" alt=""></div>
+<div><img class="pt-12 animate__animated animate__bounceInRight" src="images/sofa.png" alt=""></div>
     </div>
   </article>
 
