--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                       tracking-wide
                     "
                   >
-                    Nuevo
+                    Nuevo1
                   </span>
                   <div
                     class="
