--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       >
         Colecciones
       </h3>
-      <div class="grid gap-4 grid-cols-3 auto-cols-max">
+      <div class="grid gap-4 grid-cols-1 sm:grid-cols-3 auto-cols-max">
         <div class="bg-gray-100 rounded-xl">
           <div class="grid grid-cols-2 justify-center">
             <div>
@@ -321,7 +321,7 @@
     </section>
 
     <section
-      class="container mx-auto px-12 m-8 grid grid-cols-2 gap-12 justify-center"
+      class=" border-2 sm:border-0 border-teal-100  md:border-green-500 container mx-auto px-12  m-8 grid grid-cols-1 sm:grid-cols-2  gap-12 justify-center"
     >
       <div>
         <p>
@@ -336,12 +336,12 @@
       </div>
       <div>
         <h3
-          class="tituloParrafo pt-16 text-teal-500 hover:text-teal-600 font-normal"
+          class="tituloParrafo pt-2 sm:pt-16 text-teal-500 hover:text-teal-600 font-normal"
         >
           Armario Zeus
         </h3>
-        <p class="py-4 fParrafo">
-          Si buscas sillones de exterior que sean elegantes y se adapten a tu
+        <p class="py-4 fParrafo limit ">
+          Si buscas sillones de exteri  or que sean elegantes y se adapten a tu
           jardín, te sugiero la serie Crinoline distribuida por B&B Italia y
           diseñada por Patricia Urquiola . Esta colección se caracteriza por un
           trabajo de investigación y estilística que se ha realizado en una
@@ -389,7 +389,7 @@
         </div>
 
         <br />
-        <p class="fParrafo">
+        <p class="fParrafo limit">
           Fabricadas en polietileno y abacá, están disponibles en diferentes
           formas y tamaños, como la versión más grande, caracterizada por su
           comodidad y abrazo acogedor, un modelo especial con una gran
@@ -432,7 +432,7 @@
       >
         Colecciones
       </h3>
-      <div class="container mx-auto px-12 grid grid-cols-3 sm:grid-cols-2">
+      <div class="container mx-auto px-12 grid  grid-cols-1 sm:grid-cols-3  ">
         <!-- //art1// -->
         <!-- This is an example component -->
         <div class="max-w-2xl mx-auto">
