--- a/index.html
+++ b/index.html
@@ -405,19 +405,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
   </article>
   <div class="opcion">
@@ -425,11 +412,11 @@
       <img src="https://image.flaticon.com/icons/png/512/16/16417.png" width="50" title="desplegar ventana flotante" />
     </a>
   </div>
-  <div id="IrVentanaFlotante" class="modal">
-    <div class="carrito ventana">
+  <div id="IrVentanaFlotante" class="modal ">
+    <div class="bg-gray-200 carrito ventana border rounded shadow-md">
       <a href="#" style="text-decoration: none"> X </a>
       <table id="lista-carrito">
-        <thead>
+        <thead class="bg-gray-300 rounded ">
           <th>Imagen</th>
           <th>Nombre</th>
           <th>Precio</th>
@@ -440,6 +427,11 @@
       <a href="#" id="vaciar-carrito" class="button">Vaciar carrito</a>
     </div>
   </div>
+
+
+
+
+
   <!-- ////////////////////FOOTER////////////////////////// -->
   <footer class="border-t border-gray-200">
     <div class="container flex flex-wrap items-center justify-center px-4 py-8 mx-auto lg:justify-between">
